--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.waterfountainmachine.app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Kiosk mode permissions -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
 
     <!-- SMS permissions (for later implementation) -->
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -14,6 +12,10 @@
 
     <!-- Camera permission for QR code -->
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- Hardware features for Chrome OS compatibility -->
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
         android:allowBackup="false"
