--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
         <!-- Main Activity with launcher intent and kiosk mode setup -->
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
@@ -52,31 +52,31 @@
         </activity>
 
         <activity
-            android:name=".VendingActivity"
+            android:name=".activities.VendingActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/Theme.WaterFountainMachine" />
 
         <activity
-            android:name=".PINActivity"
+            android:name=".activities.PINActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/Theme.WaterFountainMachine" />
 
         <activity
-            android:name=".SMSActivity"
+            android:name=".activities.SMSActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/Theme.WaterFountainMachine" />
 
         <activity
-            android:name=".QRActivity"
+            android:name=".activities.QRActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/Theme.WaterFountainMachine" />
 
         <activity
-            android:name=".VendingAnimationActivity"
+            android:name=".activities.VendingAnimationActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/Theme.WaterFountainMachine" />
