--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,12 @@
             android:theme="@style/Theme.WaterFountainMachine" />
 
         <activity
+            android:name=".activities.SMSVerifyActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/Theme.WaterFountainMachine" />
+
+        <activity
             android:name=".activities.QRActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
