--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,6 +93,12 @@
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:theme="@style/Theme.WaterFountainMachine" />
 
+        <activity
+            android:name=".activities.ErrorActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/Theme.WaterFountainMachine" />
+
         <!-- Admin Panel Activities -->
         <activity
             android:name=".admin.AdminAuthActivity"
