--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.WaterFountainMachine"
-        android:screenOrientation="portrait">
+        android:screenOrientation="portrait"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Main Activity with launcher intent and kiosk mode setup -->
         <activity
