--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Signing keystore configuration (contains passwords!)
+keystore.properties
+*.jks
+*.keystore
